# sysdig

./: CMakeLists.txt
cmake/modules/: falcosecurity-libs.cmake
driver/: fillers_table.c  ppm_events_public.h  ppm_fillers.c
userspace/libscap/: scap-int.h  scap.c  scap_savefile.c
userspace/libsinsp/: CMakeLists.txt  ctext.cpp  ctext.h  cursescomponents.cpp  cursesui.cpp  cursesui.h  filterchecks.cpp  parsers.cpp  plugin.cpp  settings.h  sinsp.cpp  sinsp.h  threadinfo.cpp  threadinfo.h
userspace/libsinsp/source_plugins/cloudtrail/: cloudtrail.go
userspace/sdindexer/: CMakeLists.txt  sdindexer.cpp  sdindexer.h
userspace/sysdig/: csysdig.cpp  sysdig.cpp
